--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "作业",
+    "name" : "Smart Campus Event Hub",
     "appid" : "__UNI__1F0A5A3",
     "description" : "",
     "versionName" : "1.0.0",
